--- a/src/style/styleTaskItem.scss
+++ b/src/style/styleTaskItem.scss
@@ -81,7 +81,7 @@
     display: flex;
     padding: 10px 30px;
     justify-content: end;
-    border-bottom: 1px solid #2e2e2e;;
+    border-bottom: 1px solid #2e2e2e;
 }
 
 .task__info-deadline-title{
@@ -95,9 +95,82 @@
     opacity: 0.7;
 }
 
-.task__info-title{
-    padding: 20px 20px;
+.task__info-container{
+    display: flex;
+    justify-content: space-between;
 
+}
+
+.task-content{    
+    padding: 10px;
+    margin: 10px 0;
+
+}
+
+.task-content-title{
+    width: 380px;
+    padding-bottom: 15px;
+    
+}
+
+.task-content-button{
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+    border-top: 1px solid #ffffff;
+   
+
+}
+
+.task__button-save{
+    border: 0px solid #000000;
+    width: 35px;
+    height: 35px;
+    background: #2c2c2c;
+    color: #1eff00;
+    font-size: 22px;
+    margin: 0 10px;
+    cursor: pointer;
+    &:hover{
+        border: 1px solid #1eff00;
+        border-radius: 50%;
+    }
+    
+}
+
+.task__button-cancel{
+    border: 0px solid #000000;
+    width: 35px;
+    height: 35px;
+    background: #2c2c2c;
+    color: #ff0000;
+    font-size: 22px;
+    margin: 0 10px;
+    cursor: pointer;
+    &:hover{
+        border: 1px solid #ff0000;
+        border-radius: 50%;
+    }
+}
+
+.task__button-edit{
+    border: 0px solid #1B1B1B;
+    width: 35px;
+    height: 35px;
+    background: #1B1B1B;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    margin-top: 10px;
+
+    &:hover{
+        border: 1px solid #2e2e2e;
+        border-radius: 50%;
+    }
+    img{
+        width: 25px;
+    }
 }
 
 .task__button-close{
@@ -119,4 +192,11 @@
 
 .dragging-task{
     opacity: 0.2;
+}
+
+.task-edit-active{
+    
+    box-shadow: 0 0 5px #ffffff;
+    background: #2c2c2c;
+    border-radius: 8px;
 }
