--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,3 +1,10 @@
+@import "styleAccount.scss";
+@import "styleModalForm.scss";
+@import "styleStartPage.scss";
+@import "styleTaskItem.scss";
+@import "style_Adaptive.scss";
+
+
 *{
     box-sizing: border-box;
 }
